--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 			</main>
 			<aside class="twitter-column">
 				<h2>
-					Shared on Twitter:
+					Wanna stalk toad?
 				</h2>
 				<div style="background: black;">
 					<a class="twitter-timeline" data-width="300" data-height="2000" data-link-color="#9988ff" data-chrome="noheader nofooter transparent" data-dnt="true" data-theme="dark" href="https://twitter.com/JustAToad1">Toad Log</a>
